--- a/styles/index.css
+++ b/styles/index.css
@@ -143,11 +143,55 @@ h3 {
     text-align: center;
     color: #2F281E;
 }
-.icons {
+.icons1 {
+    justify-content: space-evenly;
+    align-items: flex-end;
+    flex-direction: row;
+    display: inline-block;
+    margin: 46px;
+    height: 178px;
+    width: 240px;
+}
+.icons2 {
+    justify-content: space-evenly;
+    align-items: flex-end;
+    flex-direction: row;
+    display: inline-block;
+    margin: 46px;
+    height: 178px;
+    width: 240px;
+}
+.icons3 {
+    justify-content: space-evenly;
+    align-items: flex-end;
+    flex-direction: row;
+    display: inline-block;
+    margin: 46px;
+    height: 178px;
+    width: 240px;
+}
+.icons4 {
+    justify-content: space-evenly;
+    align-items: flex-end;
+    flex-direction: row;
+    display: inline-block;
+    margin: 46px;
+    height: 178px;
+    width: 240px;
+}
+.h4 {
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 600;
     font-size: 22px;
     line-height: 33px;
     color: #2F281E;
+}
+.dis {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+    color: #544837;
 }
