--- a/styles/index.css
+++ b/styles/index.css
@@ -6,6 +6,7 @@
 .logo{
     margin-top: 30px;
     margin-left: 10px;
+    margin-right: 20px;
     align-self: flex-start; 
     flex-wrap: wrap;
 }
@@ -18,7 +19,8 @@
     text-align: center;
     letter-spacing: 0.02em;
     color: #2F281E;
-    margin: 30px;
+    margin-top: 30px;
+    margin-left: 10px;
 }
 .btn{
     font-family: 'Poppins';
@@ -32,7 +34,7 @@
     width: 152px;
     height: 64px;
     margin-top: 30px;
-    margin-left: 40px;
+    margin-left: 10px;
     border-radius: 6px;
     border: none;
 }
@@ -45,7 +47,7 @@
     border:  110px;
     height: 46px;
     width: 110px;
-    margin-left: 40px;
+    margin-left: 10px;
     margin-top: 25px;
     border-radius: 6px;
     border: none;
@@ -61,7 +63,7 @@
     border:  110px;
     height: 46px;
     width: 110px;
-    margin-left: 40px;
+    margin-left: 10px;
     margin-top: 25px;
     margin-right: 30px;
     border-radius: 6px;
@@ -142,6 +144,11 @@ h3 {
     line-height: 54px;
     text-align: center;
     color: #2F281E;
+    margin-top: 150px;
+    margin-left: 350px;
+    margin-right: 500px;
+    height: 108px;
+    width: 539px;
 }
 .icons1 {
     justify-content: space-evenly;
@@ -194,4 +201,166 @@ h3 {
     font-size: 16px;
     line-height: 26px;
     color: #544837;
+}
+.btn-now {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    border:  110px;
+    height: 53px;
+    width: 175px;
+    margin-left: 500px;
+    margin-top: 25px;
+    margin-right: 500px;
+    border-radius: 6px;
+    border: none;
+    font-family: 'Poppins';
+    color: #FFFFFF;
+    background-color: orange;
+}
+.texting {
+    display: inline-block;
+    flex-wrap: wrap;
+    align-items: center;
+    flex-direction: row;
+    margin-top: 100px;
+}
+.small-font-sub{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #544837;
+    width: 486px;
+    margin-left: 145px;
+    margin-top: 50px;
+    margin-bottom: 10px;
+}
+.small-font {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #544837;
+    height: 78px;
+    width: 486px;
+    margin-left: 145px;
+}
+.title-3 {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 54px;
+    color: #2F281E;
+    height: 54px;
+    width: 385px;
+    margin-left: 145px;
+    margin-top: 10px;
+}
+.sub-title {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 26px;
+    color: #2F281E;
+    margin-left: 145px;
+}
+.computing {
+    display: inline-block;
+    flex-wrap: wrap;
+    align-items: center;
+    flex-direction: row;
+    margin-top: 100px; 
+}
+.small-font-sub-2 {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #544837;
+    width: 486px;
+    margin-left: 145px;
+}
+.title-4 {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 54px;
+    color: #2F281E;
+    height: 54px;
+    width: 385px;
+    margin-left: 145px;
+}
+.small-font-2 {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #544837;
+    height: 78px;
+    width: 486px;
+    margin-left: 145px;
+}
+.pointing {
+    display: inline-block;
+    flex-wrap: wrap;
+    align-items: center;
+    flex-direction: row;
+    margin-top: 100px;
+}
+.small-font-sub-3 {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #544837;
+    width: 486px;
+    margin-left: 145px;
+    margin-top: 50px;
+    margin-bottom: 10px;
+}
+.sub-title-3 {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #544837;
+    width: 486px;
+    margin-left: 145px;
+    margin-top: 50px;
+    margin-bottom: 10px;
+}
+.title-5{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 54px;
+    color: #2F281E;
+    height: 54px;
+    width: 385px;
+    margin-left: 145px;
+    margin-top: 10px;
+}
+.small-font-3 {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #544837;
+    height: 78px;
+    width: 486px;
+    margin-left: 145px;
 }
