--- a/styles/index.css
+++ b/styles/index.css
@@ -364,3 +364,50 @@ h3 {
     width: 486px;
     margin-left: 145px;
 }
+.footer {
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+.logo-2 {
+    margin-top: 30px;
+    margin-left: 170px;
+    margin-right: 20px;
+    align-self: flex-start;
+    flex-direction: row; 
+}
+.web-map {
+    height: 205px;
+    width: 140px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 35px;
+    color: #544837;
+    margin-left: 126px;
+    margin-right: 50px;
+}
+.box {
+    width: 325px;
+    height: 48px;
+    border-color: lightgray;
+    border-radius: 5%;
+}
+.up-now-btn {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    border:  110px;
+    height: 39px;
+    width: 131px;
+    margin-left: 100px;
+    margin-top: 25px;
+    margin-right: 50px;
+    border-radius: 6px;
+    border: none;
+    font-family: 'Poppins';
+    color: #FFFFFF;
+    background-color: orange;
+}
