--- a/styles/index.css
+++ b/styles/index.css
@@ -7,6 +7,7 @@
     margin-top: 30px;
     margin-left: 10px;
     margin-right: 20px;
+    display: flex;
     align-self: flex-start; 
     flex-wrap: wrap;
 }
@@ -37,6 +38,11 @@
     margin-left: 10px;
     border-radius: 6px;
     border: none;
+    transition-duration: 2s;
+}
+button:hover{
+    background-color: #173A56;
+    color: #FFFFFF;
 }
 .in{
     font-family: 'Poppins';
@@ -364,30 +370,47 @@ h3 {
     width: 486px;
     margin-left: 145px;
 }
+footer {
+    border-top: 1px solid lightgrey;
+    width: 1109px;
+    margin: 100px;
+    height: 1400px;
+}
 .footer {
+    display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    margin-top: 100px;
+
 }
 .logo-2 {
     margin-top: 30px;
-    margin-left: 170px;
+    margin-left: 10px;
     margin-right: 20px;
-    align-self: flex-start;
-    flex-direction: row; 
+    margin-bottom: 200px;
+    display: flex;
+    align-self: flex-start; 
+    flex-wrap: wrap;
 }
 .web-map {
     height: 205px;
-    width: 140px;
+    width: 175px;
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 35px;
     color: #544837;
-    margin-left: 126px;
-    margin-right: 50px;
+    margin-left: 50px;
+    margin-right: 25px;
 }
-.box {
+.text-box-btn {
+display: flex;    
+align-self: flex-end;
+flex-direction: column;
+justify-content: flex-end;
+}
+input {
     width: 325px;
     height: 48px;
     border-color: lightgray;
@@ -402,7 +425,7 @@ h3 {
     border:  110px;
     height: 39px;
     width: 131px;
-    margin-left: 100px;
+    margin-left: 0px;
     margin-top: 25px;
     margin-right: 50px;
     border-radius: 6px;
